--- a/src/Components/Caraousel/Caraousel.scss
+++ b/src/Components/Caraousel/Caraousel.scss
@@ -5,8 +5,20 @@
 .carousel-item {
   height: 400px;
   width: 100% !important;
+  padding: 0px 30px;
 }
 
 .carousel-inner {
   width: 100% !important;
 }
+
+.carousel-indicators [data-bs-target] {
+   width: 10px !important;
+   height: 10px !important;
+   border-radius: 50%;
+  //  border: 1px blue solid !important;
+}
+
+// .active {
+//   background-color: blue !important;
+// }
