--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,10 +1,11 @@
 .footer-wrapper {
   padding: 25px;
-  width: 100vw;
+  // width: 100vw;
   height: 10vh;
-  position: fixed;
+  background-color: #111;
   bottom: 0;
-  background-color: rgb(94, 93, 93);
+  left: 0;
+  right: 0;
   color: #ffffff;
   display: flex;
   justify-content: center;
